bug-fix on the button in the hover, needed to add a minimum-gap

--- a/src/components/Body/Body.scss
+++ b/src/components/Body/Body.scss
@@ -302,12 +302,12 @@ main {
     }
 
     &__photocard {
-      height: 13.5rem;
+      height: 12rem;
     }
 
     &__photocard-img {
       width: 100%;
-      height: 15rem;
+      height: 12rem;
       object-fit: cover;
     }
 
@@ -338,6 +338,7 @@ main {
   display: flex;
   justify-content: space-between;
   width: 50%;
+  gap: 1rem;
 
   @media (max-width: 425px) {
     width: 70%;
